[package]
name = "rf"
version = "0.1.0"
authors = ["Matt Jibson <matt.jibson@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
rand = "0.7"
#rust-embed = "5.6"
tiny_http = "0.7"

# Disable default features to exclude font-kit, which requires
# servo-fontconfig, which doesn't easily compile with cross.
[dependencies.plotters]
version = "0.3"
default-features = false
features = ["svg_backend", "datetime", "line_series"]

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]
